<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hipster Shop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_product">Product</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="title_activity_subcategories">Subcategories</string>
    <string name="title_activity_products">Products</string>
    
    <string name="offers">Offers</string>

   	<string name="main.orders_button_name">Orders</string>
    <string name="main.products_button_name">Products</string>
    
    <string name="orders_list_title">Orders</string>
    
    <string name="search_title">Search</string>
    
    <string name="order_title">Order</string>
    <string name="order_total">Total: $</string>
    <string name="order_creation">Created:</string>
    <string name="order_delivery">Delivery:</string>
    
    <string name="order_request">Order no:</string>
    <string name="order_price">$</string>
    <string name="order_quantity">Quantity:</string>
        
    <string name="product_format">%.2f</string>
    
   	<string name="loading">Loading&#8230;</string>
   	<string name="male">Men</string>
   	<string name="female">Women</string>
   	<string name="all_genders">All</string>
   	<string name="adults">Adults</string>
   	<string name="children">Children</string>
   	<string name="babies">Babies</string>
   	<string name="all_ages">All</string>
    
    <string name="received">Created</string>
    <string name="processed">Confirmed</string>
    <string name="shipped">Sent</string>
    <string name="delivered">Delivered</string>
    
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawer_title">Categories</string>
    
    <string name="notification_title">There is an update in your order.</string>
    <string name="order_alert">The selected order contains no products.</string>
    <string name="orders_alert">You need to Log In to check your orders.</string>
    <string name="internet_message">Hipster Shop needs to be connected to the internet to work, check your connection and try again.</string>
    <string name="accept_message">Ok</string>
    <string name="all_subcategories">All Subcategories</string>
    <string name="all_products">All Products</string>
</resources>