<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/orderItemNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:fontFamily="sans-serif"
        android:text="@string/order_request"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/orderItemAddress"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="#f5f5f5"
                android:fontFamily="sans-serif"
                android:textColor="#999999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/orderItemPrice"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="#f5f5f5"
                android:text="@string/order_price"
                android:fontFamily="sans-serif"
                android:textColor="#999999"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="#f5f5f5"
                    android:fontFamily="sans-serif"
                    android:text="@string/order_creation"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderItemCreationDate"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="#f5f5f5"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="3dp"
                    android:textColor="#999999"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="#f5f5f5"
                    android:fontFamily="sans-serif"
                    android:text="@string/order_delivery"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/orderItemDeliveryDate"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="#f5f5f5"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="3dp"
                    android:textColor="#999999"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>