<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/orderAddress"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:background="#d2d2d2"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="#d2d2d2"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/order_creation"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/orderCreationDate"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="#d2d2d2"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:textColor="#999999"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="#d2d2d2"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/order_delivery"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/orderDeliveryDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#d2d2d2"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:textColor="#999999"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/orderList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:id="@+id/orderTotal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#262626"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/order_total"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#666"
        android:dividerHeight="1dp"
        android:background="#333"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        />
 
</android.support.v4.widget.DrawerLayout>